Noissue - Fixed translation overlap

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -119,7 +119,7 @@ html[lang^="zh_"] #content.maxthon #maxthon-instruction
 #summary ul
 {
   list-style-type: none;
-  margin: 10px 0px 27px 0px;
+  margin: 10px 0px 16px 0px;
   padding-left: 40px;
   padding-right: 0px;
   color: #333333;
